# civic-lantern

./: .gitignore  README.md
backend/: .env.example  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 0c95890efc66_add_spending_summary_mv.py  21f7883d92fe_initial_schema.py  294d25714983_rename_candidate_inside_totals_to_.py  307f6cb417c7_update_mv_election_spending_summary_.py  42cbb893c751_add_mv_candidate_spending_summary.py  4fe052547c61_drop_candidate_spending_totals.py  6682f47f96e7_add_committee_type_full.py  712c11b94d85_make_office_committee_type_state_.py  71c00547144a_make_committee_type_nullable.py  7e94b5f9c9c7_add_candidate_inside_totals.py  7eedf72ae923_revert_inside_totals_pk_to_candidate_.py  8339719380a3_add_schedule_e_totals_by_candidate.py  8dec5034fb0f_add_candidate_spending_totals.py  b3dc36a2bb53_remove_stale_tables.py  b9355b60f209_add_committee_id_to_inside_totals_by_.py  e18c8bee33d0_simplify_schedule_e_totals_pk_remove_.py  ff298162850a_fix_ghost_update_updated_at_trigger_.py
backend/civic_lantern/: main.py
backend/civic_lantern/api/: deps.py
backend/civic_lantern/core/: config.py
backend/civic_lantern/db/: session.py
backend/civic_lantern/jobs/: base_ingestor.py  ingestion.py  manager.py
backend/civic_lantern/schemas/: candidate.py  candidate_spending.py  committee.py  election_spending.py  inside_totals_by_candidate.py  schedule_e_totals_by_candidate.py  spending.py
backend/civic_lantern/services/: candidates.py  (+3 more)
backend/tests/: conftest.py
(+88 files in other folders)
